--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "dependencies": {
     "firebase": "^4.5.0",
     "react": "^16.0.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.0.0",
+    "react-popup": "^0.8.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "react-skylight": "^0.5.0",
+    "react-transition-group": "^2.2.1",
+    "tg-modal": "^0.8.0-alpha.3"
   },
   "scripts": {
     "start": "react-scripts start",
